--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Título</h1>
 
     </header>
     <section>
         <div>
-            testando...
+            <p>Número: 
+                <input type="number" name="num" id="num"><label for="num"></label>
+            <input type="button" value="Gerir Tabuada" id="tab" onclick="tabuada()">
+            </p>
         </div>
         <div>
-            
+            <select name="Tabuada" id="seltab" size="12">
+                <option value="">Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
